<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="signin_account_enter">Вход в аккаунт</string>
    <string name="signin_restore_password">Забыли пароль? Восстановить</string>
    <string name="signin_enter">Войти</string>
    <string name="signin_password">Пароль</string>
    <string name="signin_e_mail">E-mail</string>
    <string name="signin_retry">Повторить</string>
    <string name="signin_sign_in">Войти</string>
    <string name="signin_restore">Восстановить</string>
    <string name="signin_forget_password">Забыли пароль?</string>
</resources>