<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ru.emba.cbs.uikit.toolbar.CbsToolbar
            android:id="@+id/cbstoolbar_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:text="@string/signin_sign_in"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_signin_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_32"
            app:layout_constraintEnd_toEndOf="@id/guide_signin_end"
            app:layout_constraintStart_toStartOf="@id/guide_signin_start"
            app:layout_constraintTop_toBottomOf="@id/cbstoolbar_signin"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinpitedittext_signin_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:hint="@string/signin_e_mail"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_signin_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/guide_signin_end"
            app:layout_constraintStart_toStartOf="@id/guide_signin_start"
            app:layout_constraintTop_toBottomOf="@id/textinputlayout_signin_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinpitedittext_signin_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:hint="@string/signin_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signin"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/signin_sign_in"
            app:layout_constraintEnd_toEndOf="@id/guide_signin_end"
            app:layout_constraintStart_toStartOf="@id/guide_signin_start"
            app:layout_constraintTop_toBottomOf="@id/textinputlayout_signin_password"
            />

        <ru.emba.cbs.uikit.textwithbutton.CbsTextWithButton
            android:id="@+id/cbstextwithbutton_signin_restore_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_32"
            app:buttonText="@string/signin_restore"
            app:labelText="@string/signin_forget_password"
            app:layout_constraintEnd_toEndOf="@id/guide_signin_end"
            app:layout_constraintStart_toStartOf="@id/guide_signin_start"
            app:layout_constraintTop_toBottomOf="@id/button_signin"
            />

        <ProgressBar
            android:id="@+id/progressbar_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_signin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_signin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
